Bug#20872 master*.err: miscellaneous error messages